dockerfile e removendo sqlite3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,21 @@ services:
       - RABBITMQ_DEFAULT_PASS=guest
     ports:
       - "5672:5672"
+  backend:
+    #command: >
+    #  sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    networks:
+      - desafiofpf
+    ports:
+      - 8000:8000
+    volumes:
+      - .:/app
+    environment: {}
+    depends_on:
+      - rabbitmq
+
+networks:
+  desafiofpf:
