--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,48 @@ services:
       - RABBITMQ_DEFAULT_PASS=guest
     ports:
       - "5672:5672"
+      - "15672:15672"  # RabbitMQ management interface
+    networks:
+      - desafiofpf
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
-    command: >
-     sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     build:
       context: .
       dockerfile: Dockerfile
-    networks:
-      - desafiofpf
-    ports:
-      - 8000:8000
+    command: >
+      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
-    environment: {}
+    ports:
+      - "8000:8000"
+    networks:
+      - desafiofpf
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: celery -A desafiofpf worker --loglevel=info
+    volumes:
+      - .:/app
+    networks:
+      - desafiofpf
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
 
 networks:
   desafiofpf:
+    driver: bridge
